[gd_scene load_steps=12 format=2]

[ext_resource path="res://UX/Main Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/JournalMenu/bulletin_back.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/JournalMenu/bulletin_page.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/titlecard try 2.png" type="Texture" id=4]
[ext_resource path="res://Journal_Menu.tres" type="Theme" id=5]
[ext_resource path="res://assets/UI/background_ninepatch.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/textFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/textFontBorderless.tres" type="DynamicFont" id=8]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0941176, 0.0784314, 0.145098, 1 )

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -137.5
margin_top = -85.0
margin_right = 137.5
margin_bottom = 85.0
texture = ExtResource( 2 )
patch_margin_left = 6
patch_margin_top = 7
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Control" type="Control" parent="NinePatchRect"]
margin_left = 10.5
margin_top = 18.0
margin_right = 264.5
margin_bottom = 152.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="smallPage" type="NinePatchRect" parent="NinePatchRect/Control"]
margin_top = 69.0
margin_right = 125.0
margin_bottom = 139.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Label" type="Label" parent="NinePatchRect/Control/smallPage"]
margin_left = 11.0
margin_top = 8.0
margin_right = 115.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.1
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.0941176, 0.0784314, 0.145098, 1 )
custom_fonts/font = ExtResource( 8 )
text = "A game developed
by EJ Houston"
align = 1
valign = 1

[node name="CreditsButton" type="Button" parent="NinePatchRect/Control/smallPage"]
margin_left = 11.0
margin_top = 37.0
margin_right = 115.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "Credits"

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 42.0
margin_top = 12.0
margin_right = -41.0
margin_bottom = -11.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Control"]
margin_left = 26.0
margin_top = 64.0
margin_right = 85.0
margin_bottom = 78.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.454902, 0.247059, 0.223529, 1 )
custom_fonts/font = ExtResource( 7 )
text = "PreAlpha 0.0.3"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -124.5
margin_top = 3.0
margin_right = -3.5
margin_bottom = 71.0
rect_min_size = Vector2( -20, -20 )
texture = ExtResource( 4 )
stretch_mode = 6

[node name="buttonPage" type="NinePatchRect" parent="Control"]
margin_left = 120.0
margin_top = 6.0
margin_right = 245.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="menuButtons" type="VBoxContainer" parent="Control/buttonPage"]
anchor_left = 0.04
anchor_top = 0.0359712
anchor_right = 0.96
anchor_bottom = 0.964029
theme = ExtResource( 5 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="StartButton" type="Button" parent="Control/buttonPage/menuButtons"]
margin_top = 6.0
margin_right = 115.0
margin_bottom = 33.0
focus_neighbour_top = NodePath("../QuitButton")
size_flags_stretch_ratio = 0.0
custom_colors/font_color_disabled = Color( 0.894118, 0.423529, 0.180392, 1 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = ExtResource( 6 )
text = "Start / Resume"
__meta__ = {
"_edit_lock_": true
}

[node name="OptionsButton" type="Button" parent="Control/buttonPage/menuButtons"]
margin_top = 37.0
margin_right = 115.0
margin_bottom = 64.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 6 )
text = "Options"
__meta__ = {
"_edit_lock_": true
}

[node name="HelpButton" type="Button" parent="Control/buttonPage/menuButtons"]
margin_top = 68.0
margin_right = 115.0
margin_bottom = 95.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 6 )
text = "Help"
__meta__ = {
"_edit_lock_": true
}

[node name="QuitButton" type="Button" parent="Control/buttonPage/menuButtons"]
margin_top = 99.0
margin_right = 115.0
margin_bottom = 126.0
focus_neighbour_bottom = NodePath("../StartButton")
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 6 )
text = "Quit"
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="NinePatchRect/Control/smallPage/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Control/buttonPage/menuButtons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Control/buttonPage/menuButtons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Control/buttonPage/menuButtons/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="Control/buttonPage/menuButtons/QuitButton" to="." method="_on_QuitButton_pressed"]
